Added a clear function and fixed the screen size. Need to fix the histogram labels and transform function.

--- a/src/scatter/scatter.css
+++ b/src/scatter/scatter.css
@@ -61,9 +61,10 @@
 	-fx-stroke: LightSlateGray;
 }
 
-.border-pane {
+.table-box {
 	-fx-background-color: LemonChiffon;
 	-fx-padding: 10, 2, 2, 10;
+	-fx-font-family: "Lucida Console";
 	-fx-font-size: 14px;
 }
 
